src/test/ui/span/E0057.stderr
error[E0057]: this function takes 1 argument but 0 arguments were supplied
  --> $DIR/E0057.rs:3:13
   |
LL |     let a = f();
   |             ^-- an argument is missing
   |
help: provide the argument
   |
LL |     let a = f({_});
   |             ~~~~~~

error[E0057]: this function takes 1 argument but 2 arguments were supplied
  --> $DIR/E0057.rs:5:13
   |
LL |     let c = f(2, 3);
   |             ^    - argument unexpected
   |
help: remove the extra argument
   |
LL |     let c = f(2);
   |             ~~~~

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0057`.
